xwayland: Handle drag being cancelled

There was no handling for the drop being cancelled at all, leading to
leaked WlVisit and XtoWlDrag objects. X clients could also be confused
about the state of the drag and for example not being able to start another
drag.
BUG:449362


(cherry picked from commit b1d0928c8e3464e5a1a519263c5af0ea37782f76)